src/scanner.c
/* Generated by re2c 0.13.5 on Tue Jul 17 15:24:39 2012 */
#line 1 "/home/weyrick/workspace/efind/src/scanner.re"
/*

Copyright (c) 2012, Shannon Weyrick <weyrick@mozek.us>
All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    * Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

*/

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define _IN_SCANNER
#include "scanner.h"
#if 0
#define DEBUG(stmt) stmt
#else
#define DEBUG(stmt)
#endif

int scan(scanner_state *s, scanner_token *token) {

	int r=SCANNER_RETCODE_IMPOSSIBLE;
    char *q=s->start; //keep initial start

#define YYCTYPE char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER (s->ptr)
#define YYDEBUG(s, c) printf("state: %d char: %c\n", s, c)

	while(SCANNER_RETCODE_IMPOSSIBLE == r) {
	
		
#line 55 "/home/weyrick/workspace/efind/src/scanner.c"
		{
			YYCTYPE yych;

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy22;
			case '\t':
			case '\n':
			case '\r':
			case ' ':	goto yy17;
			case '*':
			case '-':
			case '.':
			case '/':
			case '?':
			case 'C':
			case 'E':
			case 'H':
			case 'J':
			case 'Q':
			case 'R':
			case 'T':
			case 'U':
			case 'V':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'c':
			case 'e':
			case 'h':
			case 'j':
			case 'q':
			case 'r':
			case 't':
			case 'u':
			case 'v':
			case 'x':
			case 'y':
			case 'z':	goto yy21;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy19;
			case 'A':
			case 'a':	goto yy4;
			case 'B':
			case 'b':	goto yy7;
			case 'D':
			case 'd':	goto yy13;
			case 'F':
			case 'f':	goto yy15;
			case 'G':
			case 'g':	goto yy10;
			case 'I':
			case 'i':	goto yy11;
			case 'K':
			case 'k':	goto yy8;
			case 'L':
			case 'l':	goto yy16;
			case 'M':
			case 'm':	goto yy9;
			case 'N':
			case 'n':	goto yy5;
			case 'O':
			case 'o':	goto yy2;
			case 'P':
			case 'p':	goto yy14;
			case 'S':
			case 's':	goto yy6;
			case 'W':
			case 'w':	goto yy12;
			default:	goto yy24;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 'R':
			case 'r':	goto yy147;
			case 'W':
			case 'w':	goto yy149;
			default:	goto yy27;
			}
yy3:
#line 179 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_WORD;
                    token->data = strndup(q, YYCURSOR - q);
                    return 0;
                }
#line 152 "/home/weyrick/workspace/efind/src/scanner.c"
yy4:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy144;
			default:	goto yy27;
			}
yy5:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy136;
			case 'O':
			case 'o':	goto yy137;
			default:	goto yy27;
			}
yy6:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy126;
			case 'O':
			case 'o':	goto yy127;
			default:	goto yy27;
			}
yy7:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'Y':
			case 'y':	goto yy121;
			default:	goto yy27;
			}
yy8:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'B':
			case 'b':	goto yy111;
			case 'I':
			case 'i':	goto yy113;
			default:	goto yy27;
			}
yy9:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'B':
			case 'b':	goto yy101;
			case 'E':
			case 'e':	goto yy103;
			default:	goto yy27;
			}
yy10:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'B':
			case 'b':	goto yy80;
			case 'I':
			case 'i':	goto yy82;
			case 'R':
			case 'r':	goto yy83;
			default:	goto yy27;
			}
yy11:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy63;
			case 'W':
			case 'w':	goto yy64;
			default:	goto yy27;
			}
yy12:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'H':
			case 'h':	goto yy53;
			default:	goto yy27;
			}
yy13:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy44;
			default:	goto yy27;
			}
yy14:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy40;
			default:	goto yy27;
			}
yy15:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy36;
			default:	goto yy27;
			}
yy16:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'I':
			case 'i':	goto yy32;
			default:	goto yy27;
			}
yy17:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy31;
yy18:
#line 168 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_WS;
                    return 0;
                }
#line 268 "/home/weyrick/workspace/efind/src/scanner.c"
yy19:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy28;
			default:	goto yy20;
			}
yy20:
#line 173 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_INT;
                    token->data = strndup(q, YYCURSOR - q);
                    return 0;
                }
#line 349 "/home/weyrick/workspace/efind/src/scanner.c"
yy21:
			yych = *++YYCURSOR;
			goto yy27;
yy22:
			++YYCURSOR;
#line 185 "/home/weyrick/workspace/efind/src/scanner.re"
			{ r = SCANNER_RETCODE_EOF; break; }
#line 357 "/home/weyrick/workspace/efind/src/scanner.c"
yy24:
			++YYCURSOR;
#line 187 "/home/weyrick/workspace/efind/src/scanner.re"
			{ r = SCANNER_RETCODE_ERR; break; }
#line 362 "/home/weyrick/workspace/efind/src/scanner.c"
yy26:
			++YYCURSOR;
			yych = *YYCURSOR;
yy27:
			switch (yych) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			default:	goto yy3;
			}
yy28:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy28;
			default:	goto yy20;
			}
yy30:
			++YYCURSOR;
			yych = *YYCURSOR;
yy31:
			switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':	goto yy30;
			default:	goto yy18;
			}
yy32:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy33;
			default:	goto yy27;
			}
yy33:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'K':
			case 'k':	goto yy34;
			default:	goto yy27;
			}
yy34:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			default:	goto yy35;
			}
yy35:
#line 156 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_FTYPE;
                    token->opt = 3; // link
                    return 0;
                }
#line 617 "/home/weyrick/workspace/efind/src/scanner.c"
yy36:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy37;
			default:	goto yy27;
			}
yy37:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy38;
			default:	goto yy27;
			}
yy38:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			default:	goto yy39;
			}
yy39:
#line 150 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_FTYPE;
                    token->opt = 2; // file
                    return 0;
                }
#line 712 "/home/weyrick/workspace/efind/src/scanner.c"
yy40:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'P':
			case 'p':	goto yy41;
			default:	goto yy27;
			}
yy41:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy42;
			default:	goto yy27;
			}
yy42:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			default:	goto yy43;
			}
yy43:
#line 144 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_FTYPE;
                    token->opt = 1; // pipe
                    return 0;
                }
#line 807 "/home/weyrick/workspace/efind/src/scanner.c"
yy44:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy45;
			default:	goto yy27;
			}
yy45:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy46;
			default:	goto yy27;
			}
yy46:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'C':
			case 'c':	goto yy47;
			default:	goto yy27;
			}
yy47:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':
			case 't':	goto yy48;
			default:	goto yy27;
			}
yy48:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy49;
			default:	goto yy27;
			}
yy49:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':
			case 'r':	goto yy50;
			default:	goto yy27;
			}
yy50:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'Y':
			case 'y':	goto yy51;
			default:	goto yy27;
			}
yy51:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			default:	goto yy52;
			}
yy52:
#line 138 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_FTYPE;
                    token->opt = 0; // directory
                    return 0;
                }
#line 937 "/home/weyrick/workspace/efind/src/scanner.c"
yy53:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy54;
			default:	goto yy27;
			}
yy54:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy55;
			default:	goto yy27;
			}
yy55:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy56;
			default:	goto yy27;
			}
yy56:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy57;
			default:	goto yy27;
			}
yy57:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy58;
			default:	goto yy27;
			}
yy58:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'M':
			case 'm':	goto yy59;
			default:	goto yy27;
			}
yy59:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy60;
			default:	goto yy27;
			}
yy60:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			case 'D':
			case 'd':	goto yy60;
			default:	goto yy62;
			}
yy62:
#line 126 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_NAMED;
                    token->opt = 2; // wholename
                    return 0;
                }
#line 1068 "/home/weyrick/workspace/efind/src/scanner.c"
yy63:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy75;
			default:	goto yy27;
			}
yy64:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'H':
			case 'h':	goto yy65;
			default:	goto yy27;
			}
yy65:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':
			case 'o':	goto yy66;
			default:	goto yy27;
			}
yy66:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':
			case 'l':	goto yy67;
			default:	goto yy27;
			}
yy67:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy68;
			default:	goto yy27;
			}
yy68:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'N':
			case 'n':	goto yy69;
			default:	goto yy27;
			}
yy69:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'A':
			case 'a':	goto yy70;
			default:	goto yy27;
			}
yy70:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'M':
			case 'm':	goto yy71;
			default:	goto yy27;
			}
yy71:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy72;
			default:	goto yy27;
			}
yy72:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			case 'D':
			case 'd':	goto yy72;
			default:	goto yy74;
			}
yy74:
#line 132 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_NAMED;
                    token->opt = 3; // iwholename
                    return 0;
                }
#line 1213 "/home/weyrick/workspace/efind/src/scanner.c"
yy75:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'M':
			case 'm':	goto yy76;
			default:	goto yy27;
			}
yy76:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':
			case 'e':	goto yy77;
			default:	goto yy27;
			}
yy77:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			case 'D':
			case 'd':	goto yy77;
			default:	goto yy79;
			}
yy79:
#line 120 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_NAMED;
                    token->opt = 1; // iname
                    return 0;
                }
#line 1309 "/home/weyrick/workspace/efind/src/scanner.c"
yy80:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case '?':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy26;
			default:	goto yy81;
			}
yy81:
#line 98 "/home/weyrick/workspace/efind/src/scanner.re"
			{
                    token->tokType = TOKEN_SIZEQUAL;
